# movieRecommendation

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  RECOMMENDATION_ALGORITHM.md  build.sh  build_c.bat  c_interface.c  db.sqlite3  fetch_posters.py  file_io.c  file_io.h  graph.c  graph.h  hash_table.c  hash_table.h  main.c  movie.c  movie.h  movies.csv  pyproject.toml  ratings.csv  recommendation.c  recommendation.h  render.yaml  requirements.txt  user.c  user.h  users.csv
docs/: 01_DATA_STRUCTURES.md  02_RECOMMENDATION_ENGINE.md  03_DJANGO_WEB_APPLICATION.md  04_C_DJANGO_INTEGRATION.md  05_FILE_IO_SYSTEM.md  06_USER_AUTHENTICATION.md  07_DEPLOYMENT_GUIDE.md  08_API_REFERENCE.md  09_ADMIN_PANEL.md  README.md
movie_site/: settings.py  urls.py
movies/: admin.py  c_engine.py  forms.py  models.py  urls.py  views.py
movies/management/commands/: create_test_user.py  fetch_posters.py  generate_dummy_users.py  import_movies.py  set_poster_paths.py  sync_csv.py  test_s3.py
movies/migrations/: 0001_initial.py
movies/templates/movies/: base.html  complete_profile.html  home.html  movie_detail.html  movie_list.html  my_ratings.html  recommendations.html
movies/templates/registration/: login.html  register.html
