[tool.poetry]
name = "movie-recommendation-site"
version = "1.0.0"
description = "Movie recommendation website with C backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
gunicorn = "^21.2"
psycopg2-binary = "^2.9"
dj-database-url = "^2.1"
django-storages = "^1.14"
boto3 = "^1.34"
Pillow = "^10.2"
python-dotenv = "^1.0"
whitenoise = "^6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
